// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should-add-index-to-element 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var SharedElement = function SharedElement(_ref) {
  var onClick = _ref.onClick;
  return (0, _jsxRuntime[\\"default\\"])({
    i: 0,
    e: \\"div\\",
    a: {
      onClick: onClick
    },
    c: [\\"I'm shared! Demonstrating that an index can be used to attach event handlers to the correctelements even if they're the same \\\\\\"element class\\\\\\".\\"]
  });
};

var items = ['apple', 'orange'];

var healthyClickHandler = function healthyClickHandler() {};

var funClickHandler = function funClickHandler() {};

var object = (0, _jsxRuntime[\\"default\\"])({
  i: 1,
  e: \\"div\\",
  a: {},
  c: [items.map(function (item) {
    return (0, _jsxRuntime[\\"default\\"])({
      i: 3,
      e: SharedElement,
      a: {
        onClick: healthyClickHandler
      },
      c: [item]
    });
  }), (0, _jsxRuntime[\\"default\\"])({
    i: 2,
    e: SharedElement,
    a: {
      onClick: funClickHandler
    },
    c: [\\"Beer\\"]
  })]
});"
`;

exports[`should-allow-expression-children 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var jsx = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: \\"div\\",
  a: {},
  c: [\\"a\\" + \\"b\\" + \\"c\\", 1 + 2 * 3]
});"
`;

exports[`should-allow-module-constructor 1`] = `
"\\"use strict\\";

var _jsxConstructor = babelHelpers.interopRequireDefault(require(\\"jsx-constructor\\"));

var object = (0, _jsxConstructor[\\"default\\"])({
  i: 0,
  e: \\"div\\",
  a: {},
  c: [(0, _jsxConstructor[\\"default\\"])({
    i: 1,
    e: \\"strong\\",
    a: {},
    c: [\\"Hello,\\"]
  }), \\" world!\\"]
});"
`;

exports[`should-allow-use-variables-default 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var UppercaseVariable = true;
var lowercaseVariable = true; // Include attribute named after the variables to ensure variables are only recognized for elements

var jsxA = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: UppercaseVariable,
  a: {
    UppercaseVariable: \\"\\"
  },
  c: null
});
var jsxB = (0, _jsxRuntime[\\"default\\"])({
  i: 1,
  e: UppercaseVariable,
  a: {
    UppercaseVariable: \\"\\"
  },
  c: []
});
var jsxC = (0, _jsxRuntime[\\"default\\"])({
  i: 2,
  e: UppercaseVariable,
  a: {
    UppercaseVariable: \\"\\"
  },
  c: [UppercaseVariable]
});
var jsxD = (0, _jsxRuntime[\\"default\\"])({
  i: 3,
  e: \\"lowercaseVariable\\",
  a: {
    lowercaseVariable: \\"\\"
  },
  c: null
});
var jsxE = (0, _jsxRuntime[\\"default\\"])({
  i: 4,
  e: \\"lowercaseVariable\\",
  a: {
    lowercaseVariable: \\"\\"
  },
  c: []
});
var jsxF = (0, _jsxRuntime[\\"default\\"])({
  i: 5,
  e: \\"lowercaseVariable\\",
  a: {
    lowercaseVariable: \\"\\"
  },
  c: [lowercaseVariable]
});"
`;

exports[`should-allow-valueless-attributes 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var object = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: \\"div\\",
  a: {},
  c: [(0, _jsxRuntime[\\"default\\"])({
    i: 1,
    e: \\"strong\\",
    a: {
      veryStrong: true,
      ignoreMe: undefined,
      ignoreMeToo: null,
      veryExplicit: true
    },
    c: [\\"Hello,\\"]
  }), \\" world!\\"]
});"
`;

exports[`should-handle-complex-hierarchies 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var currencyFormatter = Intl.NumberFormat('en-CA', {
  style: 'currency',
  currency: 'CAD'
});

var formatCurrency = function formatCurrency(value) {
  return currencyFormatter.format(value);
};

var Header = function Header(_ref) {
  var children = _ref.children;
  return (0, _jsxRuntime[\\"default\\"])({
    i: 0,
    e: \\"h2\\",
    a: {
      style: {
        margin: 0,
        marginBottom: 5,
        padding: 0
      }
    },
    c: [children]
  });
};

var SubHeader = function SubHeader(_ref2) {
  var children = _ref2.children;
  return (0, _jsxRuntime[\\"default\\"])({
    i: 1,
    e: \\"h3\\",
    a: {
      style: {
        margin: 0,
        marginBottom: 10,
        padding: 0
      }
    },
    c: [children]
  });
};

var layoutStyle = {
  display: 'flex',
  flexDirection: 'row'
};

var SplitLayout = function SplitLayout(_ref3) {
  var children = _ref3.children;
  return (0, _jsxRuntime[\\"default\\"])({
    i: 2,
    e: \\"div\\",
    a: {
      className: \\"split-layout\\",
      style: layoutStyle
    },
    c: [children]
  });
};

var Price = function Price(_ref4) {
  var price = _ref4.price,
      ppa = _ref4.ppa,
      acreage = _ref4.acreage;
  var acreageStats;

  if (ppa) {
    var ppaRound = formatCurrency(Math.round(ppa * 100) / 100);
    var acres = Math.round(acreage * 10) / 10;
    acreageStats = \\"(\\".concat(acres, \\"ac, \\").concat(ppaRound, \\" per acre)\\");
  }

  return (0, _jsxRuntime[\\"default\\"])({
    i: 3,
    e: \\"div\\",
    a: {},
    c: [(0, _jsxRuntime[\\"default\\"])({
      i: 4,
      e: \\"span\\",
      a: {},
      c: [price]
    }), !!acreageStats && (0, _jsxRuntime[\\"default\\"])({
      i: 5,
      e: \\"span\\",
      a: {},
      c: [acreageStats]
    })]
  });
};

var CloseCities = function CloseCities(_ref5) {
  var distances = _ref5.distances;
  var closeCities = Object.entries(distances);
  var cities = closeCities.sort(function (a, b) {
    return a[1] - b[1];
  }).slice(0, 3);
  return (0, _jsxRuntime[\\"default\\"])({
    i: 6,
    e: \\"ul\\",
    a: {},
    c: [cities.map(function (city) {
      var cityDistance = Math.round(city[1] * 100) / 100;
      return (0, _jsxRuntime[\\"default\\"])({
        i: 7,
        e: \\"li\\",
        a: {},
        c: [\\"\\".concat(city[0], \\" (\\").concat(cityDistance, \\"kms)\\")]
      });
    })]
  });
};

var Description = function Description(_ref6) {
  var children = _ref6.children;
  return (0, _jsxRuntime[\\"default\\"])({
    i: 8,
    e: \\"div\\",
    a: {},
    c: [typeof children === 'string' ? children.replace('***', '') : children]
  });
};

var Images = function Images(_ref7) {
  var images = _ref7.images;
  return (0, _jsxRuntime[\\"default\\"])({
    i: 9,
    e: \\"div\\",
    a: {},
    c: [!!images[0] && (0, _jsxRuntime[\\"default\\"])({
      i: 10,
      e: \\"img\\",
      a: {
        \\"data-src\\": images[0].LowResPath,
        style: \\"width: 256px; height: 200px;\\"
      },
      c: null
    })]
  });
};

var Card = function Card(_ref8) {
  var className = _ref8.className,
      children = _ref8.children;
  return (0, _jsxRuntime[\\"default\\"])({
    i: 11,
    e: \\"div\\",
    a: {
      className: \\"listing \\".concat(className),
      style: {
        position: 'relative',
        margin: 20,
        padding: 20,
        borderRadius: 5,
        backgroundColor: '#fff',
        boxShadow: '2px 2px 2px #eee'
      }
    },
    c: [children]
  });
};

var ListingId = function ListingId(_ref9) {
  var children = _ref9.children;
  return (0, _jsxRuntime[\\"default\\"])({
    i: 12,
    e: \\"div\\",
    a: {
      style: {
        position: 'absolute',
        top: 10,
        right: 10,
        fontSize: 12,
        color: '#ccc'
      }
    },
    c: [children]
  });
};

var priceRanges = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100];
var priceClassPrefix = 'listing-price';

var priceToRangeClass = function priceToRangeClass(price) {
  var priceValue = parseFloat(price.replace(/[^0-9.]/g, ''));
  var nearest10 = Math.floor(priceValue / 10000) * 10 + 10;

  if (nearest10 > 100) {
    nearest10 = 100;
  }

  return \\"\\".concat(priceClassPrefix, \\"-\\").concat(nearest10);
};

var Listing = function Listing(_ref10) {
  var _ref10$Property = _ref10.Property,
      _ref10$Property$Addre = _ref10$Property.Address,
      AddressText = _ref10$Property$Addre.AddressText,
      lat = _ref10$Property$Addre.Latitude,
      lon = _ref10$Property$Addre.Longitude,
      Photo = _ref10$Property.Photo,
      price = _ref10$Property.Price,
      description = _ref10.Description,
      distances = _ref10.Distances,
      acreage = _ref10.Acreage,
      id = _ref10.id,
      rest = babelHelpers.objectWithoutProperties(_ref10, [\\"Property\\", \\"Description\\", \\"Distances\\", \\"Acreage\\", \\"id\\"]);
  var ppa = rest['Price per acre'];
  var detailUrl = rest['Detail URL'];

  var _AddressText$split = AddressText.split('|'),
      _AddressText$split2 = babelHelpers.slicedToArray(_AddressText$split, 2),
      address = _AddressText$split2[0],
      location = _AddressText$split2[1];

  var priceRangeClass = priceToRangeClass(price);
  return (0, _jsxRuntime[\\"default\\"])({
    i: 13,
    e: Card,
    a: {
      className: priceRangeClass
    },
    c: [(0, _jsxRuntime[\\"default\\"])({
      i: 14,
      e: Header,
      a: {},
      c: [address]
    }), !!location && (0, _jsxRuntime[\\"default\\"])({
      i: 24,
      e: SubHeader,
      a: {},
      c: [location]
    }), (0, _jsxRuntime[\\"default\\"])({
      i: 15,
      e: SplitLayout,
      a: {},
      c: [!!Photo && (0, _jsxRuntime[\\"default\\"])({
        i: 25,
        e: Images,
        a: {
          images: Photo
        },
        c: null
      }), (0, _jsxRuntime[\\"default\\"])({
        i: 16,
        e: \\"div\\",
        a: {
          style: {
            marginLeft: 20
          }
        },
        c: [(0, _jsxRuntime[\\"default\\"])({
          i: 17,
          e: Price,
          a: {
            price: price,
            ppa: ppa,
            acreage: acreage
          },
          c: null
        }), (0, _jsxRuntime[\\"default\\"])({
          i: 18,
          e: CloseCities,
          a: {
            distances: distances
          },
          c: null
        }), (0, _jsxRuntime[\\"default\\"])({
          i: 19,
          e: Description,
          a: {},
          c: [description]
        }), (0, _jsxRuntime[\\"default\\"])({
          i: 20,
          e: \\"div\\",
          a: {
            style: {
              paddingTop: 10
            }
          },
          c: [(0, _jsxRuntime[\\"default\\"])({
            i: 21,
            e: \\"a\\",
            a: {
              href: detailUrl,
              style: {
                marginRight: 10
              }
            },
            c: [\\"Listing Detail\\"]
          }), (0, _jsxRuntime[\\"default\\"])({
            i: 22,
            e: \\"a\\",
            a: {
              href: \\"https://www.google.ca/maps/@\\".concat(lat, \\",\\").concat(lon, \\",10z\\")
            },
            c: [\\"Google Maps\\"]
          })]
        })]
      })]
    }), (0, _jsxRuntime[\\"default\\"])({
      i: 23,
      e: ListingId,
      a: {},
      c: [id]
    })]
  });
};

var allRangesExcept = function allRangesExcept(rangeId) {
  return priceRanges.filter(function (range) {
    return range !== rangeId;
  }).map(function (range) {
    return \\".\\".concat(priceClassPrefix, \\"-\\").concat(range);
  }).join(', ');
};

var filteredList = [];
var visibleMargin = 20;

var nextVisible = function nextVisible() {
  return filteredList.find(function (el) {
    return el.offsetTop >= window.innerHeight + window.pageYOffset - visibleMargin * 2;
  });
};

var onFilterPrice = function onFilterPrice(rangeId) {
  return function handler() {
    lazyLoad();
    var classes = allRangesExcept(rangeId);
    document.querySelectorAll(classes).forEach(function (listing) {
      listing.classList.add('filtered');
    });
    document.querySelectorAll(\\".\\".concat(priceClassPrefix, \\"-\\").concat(rangeId)).forEach(function (listing) {
      listing.classList.remove('filtered');
    });
    filteredList = Array.from(document.querySelectorAll('.listing')).filter(function (el) {
      return el.classList.contains('filtered') === false;
    });
    document.querySelector('.scroll-next').style.display = 'inline-block';
  };
};

var allPriceRanges = priceRanges.map(function (range) {
  return \\".\\".concat(priceClassPrefix, \\"-\\").concat(range);
}).join(', ');

var showAll = function showAll() {
  document.querySelectorAll(allPriceRanges).forEach(function (listing) {
    listing.style.opacity = 1;
  });
  document.querySelector('.scroll-next').style.display = 'none';
};

var FilterButtons = function FilterButtons() {
  return (0, _jsxRuntime[\\"default\\"])({
    i: 26,
    e: \\"div\\",
    a: {
      style: {
        padding: 20,
        paddingBottom: 0
      }
    },
    c: [priceRanges.map(function (rangeId) {
      return rangeId >= 100 ? (0, _jsxRuntime[\\"default\\"])({
        i: 27,
        e: \\"button\\",
        a: {
          onClick: showAll
        },
        c: ['<=100k (All)']
      }) : (0, _jsxRuntime[\\"default\\"])({
        i: 28,
        e: \\"button\\",
        a: {
          onClick: onFilterPrice(rangeId)
        },
        c: [\\"<$\\".concat(rangeId, \\"k\\")]
      });
    })]
  });
};

var onScrollNext = function onScrollNext() {
  var next = nextVisible();

  if (next) {
    window.scrollTo({
      top: next.offsetTop - visibleMargin,
      behavior: 'smooth'
    });
  }
};

var ScrollButtons = function ScrollButtons() {
  return (0, _jsxRuntime[\\"default\\"])({
    i: 29,
    e: \\"div\\",
    a: {
      style: {
        position: 'fixed',
        bottom: 10,
        right: 10
      }
    },
    c: [(0, _jsxRuntime[\\"default\\"])({
      i: 30,
      e: \\"div\\",
      a: {
        className: \\"scroll-btn scroll-top\\",
        onClick: function onClick() {
          return window.scrollTo({
            top: 0,
            behavior: 'smooth'
          });
        }
      },
      c: [\\"\\\\u2B06\\\\uFE0F Top\\"]
    }), (0, _jsxRuntime[\\"default\\"])({
      i: 31,
      e: \\"div\\",
      a: {
        className: \\"scroll-btn scroll-next\\",
        style: {
          display: 'none'
        },
        onClick: onScrollNext
      },
      c: [\\"\\\\u23E9 Next\\"]
    })]
  });
};

var container = (0, _jsxRuntime[\\"default\\"])({
  i: 32,
  e: \\"div\\",
  a: {},
  c: [(0, _jsxRuntime[\\"default\\"])({
    i: 33,
    e: FilterButtons,
    a: {},
    c: null
  }), listings.map(function (listing, index) {
    return (0, _jsxRuntime[\\"default\\"])({
      i: 35,
      e: Listing,
      a: babelHelpers[\\"extends\\"]({
        key: index
      }, listing),
      c: null
    });
  }), (0, _jsxRuntime[\\"default\\"])({
    i: 34,
    e: ScrollButtons,
    a: {},
    c: null
  })]
});"
`;

exports[`should-include-extra-space 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var jsx = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: \\"jsx\\",
  a: {},
  c: [\\"\\\\n    \\", (0, _jsxRuntime[\\"default\\"])({
    i: 1,
    e: \\"a\\",
    a: {},
    c: null
  }), \\"\\\\n    \\", (0, _jsxRuntime[\\"default\\"])({
    i: 2,
    e: \\"b\\",
    a: {},
    c: null
  }), \\" \\\\n    \\", (0, _jsxRuntime[\\"default\\"])({
    i: 3,
    e: \\"c\\",
    a: {},
    c: null
  }), \\"\\\\n    \\", (0, _jsxRuntime[\\"default\\"])({
    i: 4,
    e: \\"d\\",
    a: {},
    c: null
  }), \\"\\\\n  \\"]
});"
`;

exports[`should-not-use-variables-by-default 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var Variable = true;
var jsxA = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: Variable,
  a: {},
  c: null
});
var jsxB = (0, _jsxRuntime[\\"default\\"])({
  i: 1,
  e: Variable,
  a: {},
  c: []
});
var jsxC = (0, _jsxRuntime[\\"default\\"])({
  i: 2,
  e: Variable,
  a: {},
  c: [Variable]
});"
`;

exports[`should-nullify-children-in-closing-elements 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var jsxA = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: \\"div\\",
  a: {},
  c: []
});
var jsxB = (0, _jsxRuntime[\\"default\\"])({
  i: 1,
  e: \\"div\\",
  a: {},
  c: null
});"
`;

exports[`should-output-object 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var jsx = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: \\"html\\",
  a: {
    lang: \\"en\\"
  },
  c: [(0, _jsxRuntime[\\"default\\"])({
    i: 1,
    e: \\"head\\",
    a: {},
    c: [(0, _jsxRuntime[\\"default\\"])({
      i: 2,
      e: \\"meta\\",
      a: {
        charSet: \\"utf8\\"
      },
      c: null
    }), (0, _jsxRuntime[\\"default\\"])({
      i: 3,
      e: \\"title\\",
      a: {},
      c: [\\"A JSX Test\\"]
    })]
  }), (0, _jsxRuntime[\\"default\\"])({
    i: 4,
    e: \\"body\\",
    a: {},
    c: [(0, _jsxRuntime[\\"default\\"])({
      i: 5,
      e: \\"div\\",
      a: {
        id: \\"container\\"
      },
      c: [(0, _jsxRuntime[\\"default\\"])({
        i: 6,
        e: \\"p\\",
        a: {},
        c: [\\"Just a basic JSX transformation\\"]
      })]
    })]
  })]
});"
`;

exports[`should-use-underreact-runtime-default 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var ComponentA = function ComponentA() {
  return (0, _jsxRuntime[\\"default\\"])({
    i: 0,
    e: \\"div\\",
    a: {},
    c: [\\"This is ComponentA\\"]
  });
};

var ComponentB = function ComponentB() {
  return (0, _jsxRuntime[\\"default\\"])({
    i: 1,
    e: \\"div\\",
    a: {},
    c: [\\"This is ComponentB\\"]
  });
};

var MyOtherComponent = function MyOtherComponent(_ref) {
  var someValue = _ref.someValue;
  var Component = someValue ? ComponentA : ComponentB;
  return (0, _jsxRuntime[\\"default\\"])({
    i: 2,
    e: Component,
    a: {},
    c: null
  });
};

var object = (0, _jsxRuntime[\\"default\\"])({
  i: 3,
  e: \\"div\\",
  a: {},
  c: [(0, _jsxRuntime[\\"default\\"])({
    i: 4,
    e: \\"strong\\",
    a: {},
    c: [\\"Hello,\\"]
  }), \\" world!\\", (0, _jsxRuntime[\\"default\\"])({
    i: 5,
    e: MyOtherComponent,
    a: {
      someValue: true
    },
    c: null
  }), (0, _jsxRuntime[\\"default\\"])({
    i: 6,
    e: ComponentA,
    a: {},
    c: [(0, _jsxRuntime[\\"default\\"])({
      i: 7,
      e: ComponentB,
      a: {},
      c: [(0, _jsxRuntime[\\"default\\"])({
        i: 8,
        e: \\"div\\",
        a: {},
        c: null
      })]
    })]
  })]
});"
`;

exports[`should-work-on-text-children 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var jsx = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: \\"div\\",
  a: {},
  c: [\\"Hello, world! Hello world, again. And one more time.\\"]
});"
`;

exports[`should-work-with-members 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var object = {
  a: 1,
  b: {
    c: 2
  }
};
var jsxA = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: object.a,
  a: {},
  c: null
});
var jsxB = (0, _jsxRuntime[\\"default\\"])({
  i: 1,
  e: object.b.c,
  a: {},
  c: null
});
var jsxC = (0, _jsxRuntime[\\"default\\"])({
  i: 2,
  e: object.a,
  a: {},
  c: []
});
var jsxD = (0, _jsxRuntime[\\"default\\"])({
  i: 3,
  e: object.b.c,
  a: {},
  c: []
});
var jsxE = (0, _jsxRuntime[\\"default\\"])({
  i: 4,
  e: object.a,
  a: {},
  c: [object.a]
});
var jsxF = (0, _jsxRuntime[\\"default\\"])({
  i: 5,
  e: object.b.c,
  a: {},
  c: [object.b.c]
});"
`;

exports[`should-work-with-namespaced-attributes 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var value3 = \\"value3\\";
var value4 = \\"value4\\";
var jsx = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: \\"div\\",
  a: {
    key1: \\"value1\\",
    \\"ns:key2\\": \\"value2\\",
    \\"ns:key3\\": value3,
    key4: value4
  },
  c: []
});"
`;

exports[`should-work-with-namespaces 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var jsxA = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: \\"ns:thing\\",
  a: {},
  c: null
});
var jsxB = (0, _jsxRuntime[\\"default\\"])({
  i: 1,
  e: \\"ns:thing\\",
  a: {},
  c: []
});"
`;

exports[`should-work-with-spread-attributes 1`] = `
"\\"use strict\\";

var _jsxRuntime = babelHelpers.interopRequireDefault(require(\\"@underreact/jsx-runtime\\"));

var objectA = {
  x1: 1,
  y1: 2,
  z1: 3
};
var objectB = {
  x2: 1,
  y2: 2,
  z2: 3
};
var jsxA = (0, _jsxRuntime[\\"default\\"])({
  i: 0,
  e: \\"div\\",
  a: babelHelpers[\\"extends\\"]({}, objectA),
  c: []
});
var jsxB = (0, _jsxRuntime[\\"default\\"])({
  i: 1,
  e: \\"div\\",
  a: babelHelpers[\\"extends\\"]({
    a: 1,
    b: 2
  }, objectA),
  c: []
});
var jsxC = (0, _jsxRuntime[\\"default\\"])({
  i: 2,
  e: \\"div\\",
  a: babelHelpers[\\"extends\\"]({}, objectA, {
    a: 1,
    b: 2
  }),
  c: []
});
var jsxD = (0, _jsxRuntime[\\"default\\"])({
  i: 3,
  e: \\"div\\",
  a: babelHelpers[\\"extends\\"]({
    a: 1
  }, objectA, {
    b: 2
  }),
  c: []
});
var jsxE = (0, _jsxRuntime[\\"default\\"])({
  i: 4,
  e: \\"div\\",
  a: babelHelpers[\\"extends\\"]({
    a: 1
  }, objectA, objectB, {
    b: 2
  }),
  c: []
});
var jsxF = (0, _jsxRuntime[\\"default\\"])({
  i: 5,
  e: \\"div\\",
  a: babelHelpers[\\"extends\\"]({
    a: 1
  }, objectA, {
    b: 2
  }, objectB, {
    c: 3
  }),
  c: []
});"
`;
